@@ -7,6 +7,7 @@ date Version 3.00.36 (Beta 3)
 + Added XRC support to wxFlatNotebook.
 + Added wxFontPickerCtrl.
 + Added wxFilePickerCtrl.
++ Added wxDirPickerCtrl.
 
 03-19-2007 Version 3.00.35 (Beta 3)
 + Added wxColourPickerCtrl using source provided by vaius.
